--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "keywords": [],
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
@@ -15,6 +19,17 @@
     "mongoose": "^5.9.25",
     "postman": "^0.2.0"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "devDependencies": {},
-  "description": ""
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ingrid27/fullstackBackend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ingrid27/fullstackBackend/issues"
+  },
+  "homepage": "https://github.com/Ingrid27/fullstackBackend#readme",
+  "description": "This example is so cool"
 }
