--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
     "postman": "^0.2.0"
   },
   "engines": {
